Fixed first page background image not being full screen on mobile

--- a/assignment2/css/creative.css
+++ b/assignment2/css/creative.css
@@ -183,7 +183,7 @@ aside {
 
 header {
     position: relative;
-    width: 100%;
+    height: 100%;
     min-height: auto;
     text-align: center;
     color: #fff;
@@ -196,9 +196,11 @@ header {
 }
 
 header .header-content {
-    position: relative;
+    /*position: relative;
+    padding: 300px 15px; */
+    position: absolute;
+    top: 35%;
     width: 100%;
-    padding: 100px 15px;
     text-align: center;
 }
 
